--- a/iota-verifier/frontend/src/css/main_dialog.css
+++ b/iota-verifier/frontend/src/css/main_dialog.css
@@ -23,7 +23,7 @@ button {
 }
 
 body {
-  color: var(--white-color);
+  color: var(--black-color);
 }
 
 input,
@@ -44,7 +44,7 @@ img {
 .tutorial{
   position: absolute;
   background-color: hsla(0, 0%, 10%, 0.1);
-  border: 2px solid var(--white-color);
+  border: 2px solid var(--black-color);
   margin-inline: 1.5rem;
   backdrop-filter: blur(8px);
   width: 400px;
@@ -60,32 +60,34 @@ img {
   position: relative;
   height: 100vh;
   display: grid;
+  /* grid-template-columns: 10fr; */
   align-items: center;
 }
 .background__img {
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
 .dialog__form {
   position: relative;
-  background-color: hsla(0, 0%, 10%, 0.1);
-  border: 2px solid var(--white-color);
+  /* background-color: hsl(0, 0%, 100%); */
+  background-color: transparent;
+  /* border: 2px solid var(--white-color); */
   margin-inline: 1.5rem;
-  padding: 0rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   border-top-left-radius: 1.5rem;
-  border-top-right-radius: 0rem;
+  border-top-right-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 0rem;
+  border-bottom-left-radius: 1.5rem;
   backdrop-filter: blur(8px);
 }
 .dialog__title {
-  text-align: center;
+  text-align: left;
   font-size: var(--h1-font-size);
   font-weight: var(--font-medium);
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 .grid-container {
   display: grid;
@@ -94,6 +96,12 @@ img {
 }
 .dialog__text {
   text-align: left;
+  font-size: 20px;
+  font-weight: var(--font-medium);
+  margin-bottom: 2rem;
+}
+.dialog__out__text {
+  text-align: center;
   font-size: 20px;
   font-weight: var(--font-medium);
   margin-bottom: 2rem;
@@ -121,7 +129,7 @@ img {
   grid-template-columns: max-content 1fr;
   align-items: center;
   column-gap: 0.75rem;
-  border-bottom: 2px solid var(--white-color);
+  border-bottom: 2px solid var(--black-color);
 }
 .dialog__icon, .dialog__eye {
   font-size: 1.25rem;
@@ -130,7 +138,7 @@ img {
   width: 100%;
   padding-block: 0.8rem;
   background: none;
-  color: var(--white-color);
+  color: var(--black-color);
   position: relative;
   z-index: 1;
 }
@@ -166,7 +174,7 @@ img {
   height: 16px;
 }
 .dialog__forgot {
-  color: var(--white-color);
+  color: var(--black-color);
 }
 .dialog__forgot:hover {
   text-decoration: underline;
@@ -175,10 +183,10 @@ img {
   width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid white;
-  color: white;
-  /* background-color: var(--white-color); */
-  background-color: transparent;
+  border: 0.1rem solid black;
+  color: black;
+  /* background-color: var(--black-color); */
+  background-color:hsla(0, 0%, 10%, 0.1);
   font-weight: var(--font-medium);
   cursor: pointer;
   margin-bottom: 2rem;
@@ -187,9 +195,9 @@ img {
   width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid white;
-  color: white;
-  /* background-color: var(--white-color); */
+  border: 0.1rem solid black;
+  color: black;
+  /* background-color: var(--black-color); */
   background-color: transparent;
   font-weight: var(--font-medium);
   cursor: pointer;
@@ -203,10 +211,10 @@ img {
   width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid white;
-  color: white;
-  /* background-color: var(--white-color); */
-  background-color: transparent;
+  border: 0.1rem solid black;
+  color: black;
+  /* background-color: var(--black-color); */
+  background-color: hsla(0, 0%, 10%, 0.1);
   font-weight: var(--font-medium);
   cursor: pointer;
   margin-bottom: 2rem;
@@ -217,9 +225,9 @@ img {
   width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid white;
-  color: white;
-  /* background-color: var(--white-color); */
+  border: 0.1rem solid black;
+  color: black;
+  /* background-color: var(--black-color); */
   background-color: transparent;
   font-weight: var(--font-medium);
   cursor: pointer;
@@ -242,14 +250,14 @@ img {
 .dialog__icon {
   width: 100%;
   height: 100%;
-  color: white;
+  color: black;
   margin: 0;
 }
 .dialog__register {
   text-align: center;
 }
 .dialog__register a {
-  color: var(--white-color);
+  color: var(--black-color);
   font-weight: var(--font-medium);
 }
 .dialog__register a:hover {
@@ -272,17 +280,19 @@ img {
 /* For medium devices */
 @media screen and (min-width: 576px) {
   .page {
-    justify-content: center;
+    justify-content: right;
   }
   .dialog__form {
     /* width: 35vw; */
-    width: 600px;
+    width: 800px;
+    /* background-image: url(https://media4.giphy.com/media/6hEyKlPcFeCfnDhvmm/giphy.gif);
+    background-size: cover; */
     /* height: 70%; */
     padding: 4rem 3rem 3rem;
     border-top-left-radius: 1.5rem;
-    border-top-right-radius: 0rem;
+    border-top-right-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
-    border-bottom-left-radius: 0rem;
+    border-bottom-left-radius: 1.5rem;
   }
   .dialog__title {
     font-size: 2rem;
