--- a/iota-holder/frontend/src/App.css
+++ b/iota-holder/frontend/src/App.css
@@ -11,31 +11,39 @@
 .login_container{
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 25px;
   color: #ffffff;
   
 }
 .card.DID_card{
-  background-color: rgba(15, 193, 183, 0.3);
+  background-color: rgba(54, 127, 176, 0.474);
+  width: 25rem;
+  position: absolute;
+  top: -3rem;
+  left: 40rem;
 }
 #login{
   position: relative;
   top: 6rem;
   left: 13.65rem;
 }
-#card_button{
+#home_button{
   background-color: rgba(252, 252, 252, 0.3);
   font-size: large;
   font-weight: 600;
   color: #F2F5FB;
   border-color: #e3e3e3;
+  margin-top: 5rem;
+  width: 43rem;
+  height: 3rem;
+  
 }
-#card_button:hover{
-  background-color: #0FC1B7;
+#home_button:hover{
+  background-color: #3873a7;
   font-size: large;
   font-weight: 600;
   color: #ffffff;
-  border-color: #0FC1B7;
+  border-color: #3873a7;
 }
 .form{
   background-color: #3c39ff;
@@ -70,24 +78,31 @@
   color: #00E0CA;
   font-size: 1.8rem;
 }
-
-#DID {
+/* TODO: */
+#DID-vp {
   position: absolute;
   top: 0rem;
-  left: 45rem;
+  left: 5rem;
   display: flex;
-  
+  border: none;
+}
+#DID-create {
+  position: absolute;
+  top: -5rem;
+  left: 5rem;
+  display: flex;
+  border: none;
 }
 #display-card {
   width: 34rem;
-  height: 36rem;
+  height: 40rem;
   left: -9rem;
   top: -1.5rem;
   background-color: rgba(150, 150, 150, 0.0);
   border: none;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
-#DID p{
+#DID-create p{
   font-size: 1.2rem;
   font-weight:500;
   font-family: 'Metropolis', sans-serif;
@@ -96,7 +111,21 @@
   margin-top: 15px;
   margin-left: 30px;
 }
-#DID h1{
+#DID-create h1{
+  margin-top: 10px;
+  margin-left: 30px;
+  color: #F2F5FB;
+}
+#DID-vp p{
+  font-size: 1.2rem;
+  font-weight:500;
+  font-family: 'Metropolis', sans-serif;
+  border: none;
+  color: #fefbfb;
+  margin-top: 15px;
+  margin-left: 30px;
+}
+#DID-vp h1{
   margin-top: 10px;
   margin-left: 30px;
   color: #F2F5FB;
@@ -169,7 +198,7 @@
 
 
 .App{
-  background-image: url(./images/d3e899ac12459a54faa1396599f02939.jpg);
+  background-image: url(./images/iota-bg-5.jpeg);
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -183,3 +212,10 @@
   margin-bottom: 10px;
 }
 
+#json-word{
+  color: #000000;
+  background-color: #020082;
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: 'Metropolis', sans-serif;
+}
