--- a/iota-holder/frontend/src/App.css
+++ b/iota-holder/frontend/src/App.css
@@ -71,6 +71,9 @@
 #errorMessage{
   color: #ff0000;
   font-size: 1.1rem;
+  position: absolute;
+  top: 23rem;
+  left: -2.5rem;
 }
 #success{
   position: relative;
